--- a/Genesis_web/mobile_view.css
+++ b/Genesis_web/mobile_view.css
@@ -21,19 +21,20 @@
 
     .logo{
         grid-area: logo;
-        padding-left: 0em;
-        padding: 2.5em;
-        margin-left: 0rem;
-        margin-bottom: 0%;
-        background-image: url('/Images/Green.png');
+        /* padding-left: 0em; */
+        padding: 0 1px 1px 72px;
+        margin: 0;
+        /* margin-left: 0rem;
+        margin-bottom: 0%; */
+        background-image: url('Images/Green.png');
         background-repeat: no-repeat;
-        background-size: 70%;
+        background-size: 80%;
     
     }
     .navigation{
         padding: 0%;
         grid-area: nav;
-        margin-left: 0%;
+        margin-left: -20%;
         margin-top: 4%;
     }
 
@@ -44,7 +45,15 @@
         list-style: none;
         text-align: center;
         font-family: lato;
-        
+        grid-template-columns: repeat(3, 5rem);
+        padding-left: 90px;
+    }
+    
+    
+    
+    
+    
+    
     }
 
 
@@ -69,7 +78,7 @@
         grid-area:Text; 
         display: block;
         margin: 0%;
-        padding: 10% 6% 0% 0%;
+        padding: 0% 6% 0% 0%;
         background-color: rgb(255, 255, 255);
         
 
