--- a/Genesis_web/new.css
+++ b/Genesis_web/new.css
@@ -1,4 +1,5 @@
 @import url(font-awesome.min.css);
+@import url(mobile_view.css);
 h1 {
     font-family: lato;
     text-align: center;
@@ -254,3 +255,8 @@ footer{
 }
 
 
+@media (max-width: 360px){
+    .contact{
+        width: 100%;
+    }
+}
