--- a/Genesis_web/new.css
+++ b/Genesis_web/new.css
@@ -1,5 +1,5 @@
 @import url(font-awesome.min.css);
-@import url(mobile_view.css);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,700);
 h1 {
     font-family: lato;
     text-align: center;
@@ -153,16 +153,23 @@ a{
     background-color: rgb(255, 255, 255);
     padding-top: 100%;
     text-align: center;
-    background-image: url('Images/Python.png');
-    background-size: 115%;
+    background-image: url('Images/py3.jpg');
+    background-size: 223%;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
-    
+    background-position: 47% 50%;
+    box-shadow: 1px 5px 10px;
+    transition: transform .2s;
+
+}
+
+.Python:hover, .fullstack:hover, .ai:hover{
+    transform: scale(1.05);
 }
 
 .Python h2{
     background-color: white;
     padding: 1.5px;
+    opacity: .7;
 }
 
 .fullstack{
@@ -174,11 +181,13 @@ a{
     background-size: 90%;
     background-repeat: no-repeat;
     background-position: 30% 30%;
-
+    box-shadow: 1px 5px 10px;
+    transition: transform .2s;
 }
 .fullstack h2{
     background-color: white;
     padding: 1.5px;
+    opacity: .7;
 }
 
 .ai{
@@ -190,12 +199,14 @@ a{
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: 60% 40%;
-    
+    box-shadow: 1px 5px 10px;
+    transition: transform .2s;
 }
 
 .ai h2{
     background-color: white;
     padding: 1.5px;
+    opacity: .7;
 }
 
 /**contacts**/
@@ -206,8 +217,9 @@ a{
     margin-top: 0em;
     margin-left: 0em;
     margin-right: 0rem;
+    width: 85%;
     background-color: rgb(238, 238, 238);
-    padding: 5px 10px 5px 30px;
+    padding: 5px 10px 5px 110px;
 }
 
 .address{
@@ -228,21 +240,40 @@ a{
     color: black;
 }
 
-.social{
+.social ul{
     font-family: Montserrat;
     font-size: 10pt;
     text-align: left;
+    list-style: none;
+    justify-content: left;
+    display: grid;
+    padding: 0;
+    font-size: 15pt;
+    grid-gap: 10px;
+    grid-template-columns: repeat(4,2rem);
 }
 
-.icon:before {
-    /*-moz-osx-font-smoothing: grayscale;*/
-    /*-webkit-font-smoothing: antialiased;*/
-    font-family: FontAwesome;
-    /*font-style: normal;
-    font-weight: normal;
-    text-transform: none !important;*/
-    box-sizing: border-box;
-}
+/* Icon */
+
+    .icon {
+        text-decoration: none;
+        border-bottom: none;
+        position: relative;
+    }
+
+        .icon:before {
+            -moz-osx-font-smoothing: grayscale;
+            -webkit-font-smoothing: antialiased;
+            font-family: FontAwesome;
+            font-style: normal;
+            font-weight: normal;
+            text-transform: none !important;
+        }
+
+        .icon > .label {
+            display: none;
+        }
+
 
 /*ul.icons li .icon:before {
     font-size: 2em;
@@ -255,8 +286,3 @@ footer{
 }
 
 
-@media (max-width: 360px){
-    .contact{
-        width: 100%;
-    }
-}
