--- a/Genesis_web/new.css
+++ b/Genesis_web/new.css
@@ -140,7 +140,7 @@ a{
 .subject{
     margin-top: 0px;
     margin-right: 100px;
-    margin-left: 135px;
+    margin-left: 100px;
     margin-bottom: 20px;
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -210,9 +210,9 @@ a{
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1em;
     margin-top: 0em;
-    margin-left: 8em;
+    /*margin-left: 8em;*/
     margin-right: 0rem;
-    width: 85%;
+    width: 99%;
     background-color: rgb(238, 238, 238);
     padding: 5px 10px 5px 0px;
 }
@@ -224,13 +224,13 @@ a{
     font-family: Montserrat;
     font-size: 10pt;
     padding: 0px;
-    text-align: left;
+    /*text-align: left;*/
 }
 
 .email {
     font-family: Montserrat;
     font-size: 10pt;
-    text-align: left;
+    /*text-align: left;*/
     color: black;
 }
 
@@ -241,13 +241,13 @@ a{
 .social ul{
     font-family: Montserrat;
     font-size: 10pt;
-    text-align: left;
+    text-align: center;
     list-style: none;
-    justify-content: left;
+    justify-content: center;
     display: grid;
     padding: 0;
     font-size: 15pt;
-    grid-gap: 10px;
+    grid-gap: 40px;
     grid-template-columns: repeat(4,2rem);
 }
 
@@ -265,6 +265,7 @@ a{
     font-family: FontAwesome;
     font-style: normal;
     font-weight: normal;
+    font-size: 25pt;
     text-transform: none !important;
 }
 
@@ -277,9 +278,12 @@ a{
 }*/
 /**footer**/
 footer{
-    text-align: left;
+    text-align: center;
     font-family: Montserrat;
     /*font-size: 8pt;*/
+}
+footer p{
+    text-align: center;
 }
 
 
